--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animatecss": "^3.0.5",
     "tw-animate-css": "^1.2.5"
